problemas de responsive solucionados en pagina variedades

--- a/html/tienda.html
+++ b/html/tienda.html
@@ -55,7 +55,7 @@
             <br>
             <textarea name="" id="mensaje" cols="30" rows="10"></textarea>
             <br><br>
-            <a href="compra.html" class="button">Pedir</a>
+            <button class="botones"><a href="compra.html" class="button">Pedir</a></button>
         </form>
     </main>
     <br><br>
