--- a/html/variedades.html
+++ b/html/variedades.html
@@ -51,9 +51,9 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../img/lomitook.jpg" class="d-block w-100 h-100" alt="Imagen de un lomito completo">
+                <img src="https://www.lavoz.com.ar/resizer/LEt9HIyG8m2WwoMXQe92e5oLbeY=/980x640/smart/filters:quality(75):format(webp)/cloudfront-us-east-1.images.arcpublishing.com/grupoclarin/4J3UJNMRD5DCXODMPUHI3BS3TE.jpg" class="d-block w-100 h-100" alt="Imagen de un lomito completo">
                 <div class="carousel-caption">
-                    <div class="desclomo">
+                    <div class="desclomos">
                         <h3>Completo</h3>
                         <p>Pan, lomo, tomate, lechuga, queso, jamon, huevo y mayonesa.</p>
                     </div>
@@ -62,7 +62,7 @@
               <div class="carousel-item">
                 <img src="https://images.loveat.la/media/4363/images/plates/166966" class="d-block w-100 h-100" alt="Imagen de un lomito Lomojohn">
                 <div class="carousel-caption">
-                    <div class="desclomo">
+                    <div class="desclomos">
                         <h3>Lomojohn</h3>
                         <p>Pan, lomo, tomate, lechuga, queso, cbolla caramelizada, pimientos asados, salsa BBQ, jamon, huevo y mayonesa.</p>
                     </div>
@@ -71,7 +71,7 @@
               <div class="carousel-item">
                 <img src="../img/lomocriollo.jpg" class="d-block w-100 h-100" alt="Imagen de un lomito criollo">
                 <div class="carousel-caption">
-                    <div class="desclomo">
+                    <div class="desclomos">
                         <h3>Criollo</h3>
                         <p>Pan, lomo, tomate, lechuga, queso, salsa criolla (tomate, cebolla, pimiento) y mayonesa.</p>
                     </div>
