--- a/html/ayuda.html
+++ b/html/ayuda.html
@@ -52,7 +52,7 @@
             <br>
             <textarea name="" id="mensaje" cols="30" rows="10"></textarea>
             <br><br>
-            <button>Enviar</button>
+            <button class="botones">Enviar</button>
             
 
 
