mejoras en diseño y colores

--- a/html/variedades.html
+++ b/html/variedades.html
@@ -41,6 +41,7 @@
         </div>
     </header>
     <main>
+        <h1>Nuestras mejores variedades</h1>
         <!-- Carrusel -->
         <div id="carouselExampleCaptions" class="carousel slide">
             <div class="carousel-indicators">
@@ -97,6 +98,9 @@
             </button>
           </div>
     </main>
+    <div>
+        <p class="mensajeimp">Si quieres que agreguemos alguno, por favor comunicate con nosotros por <a href="ayuda.html" class="btnaqui">aquí</a></p>
+    </div>
     <footer>
         <ul>
             <li class="navegacion"><a href="https://instagram.com" target="_blank">Instagram</a></li>
