--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <img src="img/mayonesa-casera.jpg" alt="imagen del secreto">
         <h2 class="subprinc">¿Cómo se hace un lomito santiagueño?</h2>
         <br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/csPC5udFhAI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="video"></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/csPC5udFhAI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="video" alt="video de cómo se hace un lomito"></iframe>
     </main>
     <br><br>
     <footer>
