incorporacion de sass y animaciones al proyecto

--- a/html/ayuda.html
+++ b/html/ayuda.html
@@ -22,7 +22,7 @@
             <nav class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto fuentes">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="tienda.html">Tienda</a>
@@ -34,7 +34,7 @@
                         <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="ayuda.html">Ayúdanos a crecer</a>
+                        <a class="nav-link active" href="ayuda.html">Ayúdanos a crecer</a>
                     </li>
                 </ul>
             </nav>
@@ -61,9 +61,9 @@
     <br><br>
     <footer>
         <ul>
-            <li class="navegacion"><a href="https://instagram.com" target="_blank">Instagram</a></li>
-            <li class="navegacion"><a href="https://facebook.com" target="_blank">Facebook</a></li>
-            <li class="navegacion"><a href="html/contacto.html">Contacto</a></li>
+            <li class="navegacion"><a href="https://instagram.com" target="_blank"><img src="../img/logoig.jpg" alt="logo de instagram" class="logo"></a></li>
+            <li class="navegacion"><a href="https://facebook.com" target="_blank"><img src="../img/logofacebook.png" alt="Logo de facebook" class="logo"></a></li>
+            <li class="navegacion"><a href="contacto.html" target="_blank"><img src="../img/logocon.png" alt="logo de telefono" class="logo logocon"></a></li>
         </ul>
         <p>Todos los derechos reservados.</p>
     </footer>
