--- a/html/contacto.html
+++ b/html/contacto.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¿Quiénes somos?</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon">
@@ -22,7 +23,7 @@
             <nav class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto fuentes">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="tienda.html">Tienda</a>
@@ -31,7 +32,7 @@
                         <a class="nav-link" href="variedades.html">Variedades</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
+                        <a class="nav-link active" href="contacto.html">Contacto</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="ayuda.html">Ayúdanos a crecer</a>
@@ -41,27 +42,38 @@
         </div>
     </header>
     <main>
-        <h2 class=>Nuestras redes:</h2>
+        <h2 class="subprinc" data-aos="flip-down">Nuestras redes:</h2>
         <br><br>
-        <div>
+        <div class="redes">
             <ul>
-                <li class="navegacion"><a href="https://web.whatsapp.com/" target="_blank">WhatsApp</a></li>
-                <li><img src="../img/6c784972cbf5806215d46fbda8b0c46a.jpg" alt="logo de whatsapp" class="logo"></li>
-                <li class="navegacion"><a href="https://instagram.com" target="_blank">Instagram</a></li>
-                <li><img src="../img/depositphotos_219349064-stock-photo-chisinau-moldova-september-19-2018.jpg" alt="logo de instagram" class="logo"></li>
-                <li class="navegacion"><a href="https://facebook.com" target="_blank">Facebook</a></li>
-                <li><img src="../img/Facebook_logo_(square).png" alt="Logo de facebook" class="logo"></li>
+                <li class="navegacion">
+                    <button>
+                        <a href="https://web.whatsapp.com/" target="_blank"><img src="../img/logowpp.jpg" alt="logo de whatsapp" class="logo"></a>
+                    </button>
+                </li>
+                <li class="navegacion">
+                    <button>
+                        <a href="https://instagram.com" target="_blank"><img src="../img/logoig.jpg" alt="logo de instagram" class="logo"></a></li>
+                    </button>
+                </li>
+                <li class="navegacion">
+                    <button>
+                    <a href="https://facebook.com" target="_blank"><img src="../img/logofacebook.png" alt="Logo de facebook" class="logo"></a>
+                    </button>
+                </li>
             </ul>
         </div>
-        <h2 class=>¿Dónde estamos?</h2>
+        <h2 class="subprinc" data-aos="flip-down">¿Dónde estamos?</h2>
         <br>
+        <div class="imagenesInicio" data-aos="fade-right">
         <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d14121.768707690875!2d-64.25092478780516!3d-27.76534655305076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjfCsDQ1JzM0LjAiUyA2NMKwMTQnNDkuMSJX!5e0!3m2!1ses!2sar!4v1689384443164!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="video"></iframe>
+        </div>
     </main>
     <footer>
         <ul>
-            <li class="navegacion"><a href="https://instagram.com" target="_blank">Instagram</a></li>
-            <li class="navegacion"><a href="https://facebook.com" target="_blank">Facebook</a></li>
-            <li class="navegacion"><a href="html/contacto.html" target="_blank">Contacto</a></li>
+            <li class="navegacion"><a href="https://instagram.com" target="_blank"><img src="../img/logoig.jpg" alt="logo de instagram" class="logo"></a></li>
+            <li class="navegacion"><a href="https://facebook.com" target="_blank"><img src="../img/logofacebook.png" alt="Logo de facebook" class="logo"></a></li>
+            <li class="navegacion"><a href="contacto.html" target="_blank"><img src="../img/logocon.png" alt="logo de telefono" class="logo logocon"></a></li>
         </ul>
         <p>Todos los derechos reservados.</p>
     </footer>
@@ -69,6 +81,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous">
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
     </script>
 </body>
 </html>
