--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lomojohn</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
 </head>
+<!-- Barra de navegacion -->
 <body class="container-fluid">
     <header class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
@@ -44,24 +46,30 @@
     <h1>Lomojohn</h1>
     <br><br>
     <main>
-        <h2 class="subprinc">¿Qué es el lomito?</h2>
+        <h2 class="subprinc" data-aos="flip-down">¿Qué es el lomito?</h2>
         <p>El lomito, de origen alemán pero ya totalmente nacionalizado, es un tradicional e infaltable plato dentro de las cartas de cada restaurant con menús de sánguches. Característico por su carne de lomo de res y sus magníficos agregados que lo pueden convertir en el mejor lomito con el gusto que te imagines, se ha convertido en uno de los favoritos de las personas.</p>
         <br>
-        <img src="img/lomitook.jpg" alt="imagen de un lomito">
-        <h2 class="subprinc">¿Cuál es el secreto de un buen lomito?</h2>
+        <div class="imagenesInicio" data-aos="flip-left">
+            <img src="img/lomitook.jpg" alt="imagen de un lomito">
+        </div>
+        <h2 class="subprinc" data-aos="flip-down">¿Cuál es el secreto de un buen lomito?</h2>
         <p>El secreto de un buen lomito, sobre todo en la capital de Santiago del Estero, es la mayonesa casera, una delicia que no puede faltar para darle a cualquier lomito ese sabor especial. Cada bar o restaurant tiene su propia mayonesa, lo que le da el toque diferenciador del lugar. Nuestra mayonesa es hasta el momento la mejor, y solo se requiere de ingredientes básicos como huevo, limon, sal y aceite.</p>
         <br>
-        <img src="img/mayonesa-casera.jpg" alt="imagen del secreto">
-        <h2 class="subprinc">¿Cómo se hace un lomito santiagueño?</h2>
+        <div class="imagenesInicio" data-aos="fade-left">
+            <img src="img/mayonesa-casera.jpg" alt="imagen de la mayonesa casera">
+        </div>
+        <h2 class="subprinc" data-aos="flip-down">¿Cómo se hace un lomito santiagueño?</h2>
         <br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/csPC5udFhAI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="video" alt="video de cómo se hace un lomito"></iframe>
+        <div class="imagenesInicio" data-aos="fade-right">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/csPC5udFhAI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="video" alt="video de cómo se hace un lomito"></iframe>
+        </div>
     </main>
     <br><br>
     <footer>
         <ul>
-            <li class="navegacion"><a href="https://instagram.com" target="_blank">Instagram</a></li>
-            <li class="navegacion"><a href="https://facebook.com" target="_blank">Facebook</a></li>
-            <li class="navegacion"><a href="html/contacto.html">Contacto</a></li>
+            <li class="navegacion"><a href="https://instagram.com" target="_blank"><img src="../img/logoig.jpg" alt="logo de instagram" class="logo"></a></li>
+            <li class="navegacion"><a href="https://facebook.com" target="_blank"><img src="../img/logofacebook.png" alt="Logo de facebook" class="logo"></a></li>
+            <li class="navegacion"><a href="html/contacto.html" target="_blank"><img src="../img/logocon.png" alt="logo de telefono" class="logo logocon"></a></li>
         </ul>
         <p>Todos los derechos reservados.</p>
     </footer>
@@ -70,10 +78,14 @@
 
 
 
-
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous">
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
     </script>
 </body>
 </html>
