--- a/html/ayuda.html
+++ b/html/ayuda.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ayúdanos a crecer</title>
+    <title>Lomojohn - Ayúdanos a crecer</title>
+    <meta name="description" content="Lomitos de la mejor calidad">
+    <meta name="description" content="Lomojohn">
+    <meta name="description" content="Origen del lomito">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon">
@@ -42,7 +45,7 @@
     </header>
     <br><br>
     <main>
-        <h2 class="reco">Recomendaciones o quejas</h2>
+        <h1>Recomendaciones o quejas</h1>
         <br><br>
         <form>
             <label for="nombre"> Nombre: </label>
@@ -61,9 +64,9 @@
     <br><br>
     <footer>
         <ul>
-            <li class="navegacion"><a href="https://instagram.com" target="_blank"><img src="../img/logoig.jpg" alt="logo de instagram" class="logo"></a></li>
+            <li class="navegacion"><a href="https://instagram.com" target="_blank"><img src="../img/logoig.webp" alt="logo de instagram" class="logo"></a></li>
             <li class="navegacion"><a href="https://facebook.com" target="_blank"><img src="../img/logofacebook.png" alt="Logo de facebook" class="logo"></a></li>
-            <li class="navegacion"><a href="contacto.html" target="_blank"><img src="../img/logocon.png" alt="logo de telefono" class="logo logocon"></a></li>
+            <li class="navegacion"><a href="contacto.html" target="_blank"><img src="../img/logocon.png" alt="logo de telefono" class="logo logoCon"></a></li>
         </ul>
         <p>Todos los derechos reservados.</p>
     </footer>
