--- a/html/contacto.html
+++ b/html/contacto.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>¿Quiénes somos?</title>
+    <title>Lomojohn - ¿Quiénes somos?</title>
+    <meta name="description" content="Lomitos de la mejor calidad">
+    <meta name="description" content="Lomojohn">
+    <meta name="description" content="Origen del lomito">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -42,7 +45,7 @@
         </div>
     </header>
     <main>
-        <h2 class="subprinc" data-aos="flip-down">Nuestras redes:</h2>
+        <h1 data-aos="flip-down">Nuestras redes</h1>
         <br><br>
         <div class="redes">
             <ul>
@@ -53,7 +56,7 @@
                 </li>
                 <li class="navegacion">
                     <button>
-                        <a href="https://instagram.com" target="_blank"><img src="../img/logoig.jpg" alt="logo de instagram" class="logo"></a></li>
+                        <a href="https://instagram.com" target="_blank"><img src="../img/logoig.webp" alt="logo de instagram" class="logo"></a></li>
                     </button>
                 </li>
                 <li class="navegacion">
@@ -63,17 +66,17 @@
                 </li>
             </ul>
         </div>
-        <h2 class="subprinc" data-aos="flip-down">¿Dónde estamos?</h2>
+        <h2 class="subPrinc" data-aos="flip-down">¿Dónde estamos?</h2>
         <br>
-        <div class="imagenesInicio" data-aos="fade-right">
+        <div class="imagenesInicio">
         <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d14121.768707690875!2d-64.25092478780516!3d-27.76534655305076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjfCsDQ1JzM0LjAiUyA2NMKwMTQnNDkuMSJX!5e0!3m2!1ses!2sar!4v1689384443164!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="video"></iframe>
         </div>
     </main>
     <footer>
         <ul>
-            <li class="navegacion"><a href="https://instagram.com" target="_blank"><img src="../img/logoig.jpg" alt="logo de instagram" class="logo"></a></li>
+            <li class="navegacion"><a href="https://instagram.com" target="_blank"><img src="../img/logoig.webp" alt="logo de instagram" class="logo"></a></li>
             <li class="navegacion"><a href="https://facebook.com" target="_blank"><img src="../img/logofacebook.png" alt="Logo de facebook" class="logo"></a></li>
-            <li class="navegacion"><a href="contacto.html" target="_blank"><img src="../img/logocon.png" alt="logo de telefono" class="logo logocon"></a></li>
+            <li class="navegacion"><a href="contacto.html" target="_blank"><img src="../img/logocon.png" alt="logo de telefono" class="logo logoCon"></a></li>
         </ul>
         <p>Todos los derechos reservados.</p>
     </footer>
