--- a/html/variedades.html
+++ b/html/variedades.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Las mejores variedades</title>
+    <title>Lomojohn - Las mejores variedades</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon">
@@ -54,7 +54,7 @@
               <div class="carousel-item active">
                 <img src="https://www.lavoz.com.ar/resizer/LEt9HIyG8m2WwoMXQe92e5oLbeY=/980x640/smart/filters:quality(75):format(webp)/cloudfront-us-east-1.images.arcpublishing.com/grupoclarin/4J3UJNMRD5DCXODMPUHI3BS3TE.jpg" class="d-block w-100 h-100" alt="Imagen de un lomito completo">
                 <div class="carousel-caption">
-                    <div class="desclomos">
+                    <div class="descLomos">
                         <h3>Completo</h3>
                         <p>Pan, lomo, tomate, lechuga, queso, jamon, huevo y mayonesa.</p>
                     </div>
@@ -63,7 +63,7 @@
               <div class="carousel-item">
                 <img src="https://images.loveat.la/media/4363/images/plates/166966" class="d-block w-100 h-100" alt="Imagen de un lomito Lomojohn">
                 <div class="carousel-caption">
-                    <div class="desclomos">
+                    <div class="descLomos">
                         <h3>Lomojohn</h3>
                         <p>Pan, lomo, tomate, lechuga, queso, cbolla caramelizada, pimientos asados, salsa BBQ, jamon, huevo y mayonesa.</p>
                     </div>
@@ -72,7 +72,7 @@
               <div class="carousel-item">
                 <img src="../img/lomocriollo.jpg" class="d-block w-100 h-100" alt="Imagen de un lomito criollo">
                 <div class="carousel-caption">
-                    <div class="desclomos">
+                    <div class="descLomos">
                         <h3>Criollo</h3>
                         <p>Pan, lomo, tomate, lechuga, queso, salsa criolla (tomate, cebolla, pimiento) y mayonesa.</p>
                     </div>
@@ -81,7 +81,7 @@
               <div class="carousel-item">
                 <img src="../img/Lomo-con-Roquefort-.jpg" class="d-block w-100 h-100" alt="Imagen de un lomito con roquefort">
                 <div class="carousel-caption">
-                    <div class="desclomo">
+                    <div class="descLomo">
                         <h3>Johnblue</h3>
                         <p>Pan, lomo, tomate, lechuga, queso, queso roquefórt, queso muzzarella y mayonesa.</p>
                     </div>
@@ -99,13 +99,13 @@
           </div>
     </main>
     <div>
-        <p class="mensajeimp">Si quieres que agreguemos alguno, por favor comunicate con nosotros por <a href="ayuda.html" class="btnaqui">aquí</a></p>
+        <p class="mensajeImp">Si quieres que agreguemos alguno, por favor comunicate con nosotros por <a href="ayuda.html" class="btnAqui">aquí</a></p>
     </div>
     <footer>
         <ul>
-            <li class="navegacion"><a href="https://instagram.com" target="_blank"><img src="../img/logoig.jpg" alt="logo de instagram" class="logo"></a></li>
+            <li class="navegacion"><a href="https://instagram.com" target="_blank"><img src="../img/logoig.webp" alt="logo de instagram" class="logo"></a></li>
             <li class="navegacion"><a href="https://facebook.com" target="_blank"><img src="../img/logofacebook.png" alt="Logo de facebook" class="logo"></a></li>
-            <li class="navegacion"><a href="contacto.html" target="_blank"><img src="../img/logocon.png" alt="logo de telefono" class="logo logocon"></a></li>
+            <li class="navegacion"><a href="contacto.html" target="_blank"><img src="../img/logocon.png" alt="logo de telefono" class="logo logoCon"></a></li>
         </ul>
         <p>Todos los derechos reservados.</p>
     </footer>
