arreglo de detalles estéticos

--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
     <h1>Lomojohn</h1>
     <br><br>
     <main>
-        <h2 class="subPrinc" data-aos="flip-down">¿Qué es el lomito?</h2>
+        <h2 class="subPrinc" data-aos="flip-down" data-aos-duration="2000">¿Qué es el lomito?</h2>
         <p>El lomito, de origen alemán pero ya totalmente nacionalizado, es un tradicional e infaltable plato dentro de las cartas de cada restaurant con menús de sánguches. Característico por su carne de lomo de res y sus magníficos agregados que lo pueden convertir en el mejor lomito con el gusto que te imagines, se ha convertido en uno de los favoritos de las personas.</p>
         <br>
-        <div class="imagenesInicio" data-aos="flip-left">
+        <div class="imagenesInicio" data-aos="fade-down" data-aos-anchor-placement="top-bottom" data-aos-duration="2000">
             <img src="img/lomitook.jpg" alt="imagen de un lomito">
         </div>
-        <h2 class="subPrinc" data-aos="flip-down">¿Cuál es el secreto de un buen lomito?</h2>
+        <h2 class="subPrinc" data-aos="flip-down" data-aos-duration="2000">¿Cuál es el secreto de un buen lomito?</h2>
         <p>El secreto de un buen lomito, sobre todo en la capital de Santiago del Estero, es la mayonesa casera, una delicia que no puede faltar para darle a cualquier lomito ese sabor especial. Cada bar o restaurant tiene su propia mayonesa, lo que le da el toque diferenciador del lugar. Nuestra mayonesa es hasta el momento la mejor, y solo se requiere de ingredientes básicos como huevo, limon, sal y aceite.</p>
         <br>
-        <div class="imagenesInicio" data-aos="fade-left">
+        <div class="imagenesInicio" data-aos="fade-down" data-aos-anchor-placement="top-bottom" data-aos-duration="2000">
             <img src="img/mayonesa-casera.jpg" alt="imagen de la mayonesa casera">
         </div>
-        <h2 class="subPrinc" data-aos="flip-down">¿Cómo se hace un lomito santiagueño?</h2>
+        <h2 class="subPrinc" data-aos="flip-down" data-aos-duration="2000">¿Cómo se hace un lomito santiagueño?</h2>
         <br>
-        <div class="imagenesInicio" data-aos="fade-right">
+        <div class="imagenesInicio" data-aos="fade-down" data-aos-anchor-placement="top-bottom" data-aos-duration="2000">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/csPC5udFhAI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="video" alt="video de cómo se hace un lomito"></iframe>
         </div>
     </main>
