--- a/html/contacto.html
+++ b/html/contacto.html
@@ -68,7 +68,7 @@
         </div>
         <h2 class="subPrinc" data-aos="flip-down">¿Dónde estamos?</h2>
         <br>
-        <div class="imagenesInicio">
+        <div class="imagenesInicio" data-aos="flip-down" data-aos-duration="1500">
         <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d14121.768707690875!2d-64.25092478780516!3d-27.76534655305076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjfCsDQ1JzM0LjAiUyA2NMKwMTQnNDkuMSJX!5e0!3m2!1ses!2sar!4v1689384443164!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="video"></iframe>
         </div>
     </main>
