Ultimos cambios de sass

--- a/html/variedades.html
+++ b/html/variedades.html
@@ -99,7 +99,7 @@
           </div>
     </main>
     <div>
-        <p class="mensajeImp">Si quieres que agreguemos alguno, por favor comunicate con nosotros por <a href="ayuda.html" class="btnAqui">aquí</a></p>
+        <p class="mensajeImp">Si quieres que agreguemos alguno, por favor comunicate con nosotros por <a href="ayuda.html" class="btnAqui">aquí</a>.</p>
     </div>
     <footer>
         <ul>
