--- a/html/variedades.html
+++ b/html/variedades.html
@@ -89,7 +89,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/Lomo-con-Roquefort-.jpg" class="d-block w-100 h-100"
+                    <img src="../img/lomoroquefort.png" class="d-block w-100 h-100"
                         alt="Imagen de un lomito con roquefort">
                     <div class="carousel-caption">
                         <div class="descLomo">
