--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <li class="navegacion"><a href="html/contacto.html" target="_blank"><img src="./img/logocon.png"
                         alt="logo de telefono" class="logo logoCon"></a></li>
         </ul>
-        <p>Todos los derechos reservados.</p>
+        <p>Copyright © 2023 <a href="https://lomojohn.vercel.app">Lomojohn</a>.</p>
     </footer>
 
 
